--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="card-box align-left">
                         <h4 class="card-title mbr-fonts-style mb-4 display-1"><strong>What can i do?</strong></h4>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">Misskeyのモデレーションしかできません。</p>
-                        <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://mobiri.se">See my Jobs</a></div>
+                        
                     </div>
                 </div>
             </div>
@@ -144,8 +144,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezaZsWMW5-modal" data-bs-target="#tezaZsWMW5-modal">
-                    <img class="w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tezaZsWMW5" data-bs-target="#lb-tezaZsWMW5">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezdjotp2B-modal" data-bs-target="#tezdjotp2B-modal">
+                    <img class="w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -153,8 +153,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Mobile Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezaZsWMW5-modal" data-bs-target="#tezaZsWMW5-modal">
-                    <img class="w-100" src="assets/images/mbr-3.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tezaZsWMW5" data-bs-target="#lb-tezaZsWMW5">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezdjotp2B-modal" data-bs-target="#tezdjotp2B-modal">
+                    <img class="w-100" src="assets/images/mbr-3.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -162,8 +162,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Polygraphic Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezaZsWMW5-modal" data-bs-target="#tezaZsWMW5-modal">
-                    <img class="w-100" src="assets/images/mbr-4.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tezaZsWMW5" data-bs-target="#lb-tezaZsWMW5">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezdjotp2B-modal" data-bs-target="#tezdjotp2B-modal">
+                    <img class="w-100" src="assets/images/mbr-4.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -171,8 +171,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Web Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezaZsWMW5-modal" data-bs-target="#tezaZsWMW5-modal">
-                    <img class="w-100" src="assets/images/mbr-6.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tezaZsWMW5" data-bs-target="#lb-tezaZsWMW5">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezdjotp2B-modal" data-bs-target="#tezdjotp2B-modal">
+                    <img class="w-100" src="assets/images/mbr-6.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -181,11 +181,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tezaZsWMW5-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tezdjotp2B-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-tezaZsWMW5" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-tezdjotp2B" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder">
@@ -201,18 +201,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tezaZsWMW5" data-bs-target="#lb-tezaZsWMW5"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tezaZsWMW5" data-bs-target="#lb-tezaZsWMW5"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tezaZsWMW5" data-bs-target="#lb-tezaZsWMW5"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tezaZsWMW5" data-bs-target="#lb-tezaZsWMW5"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tezaZsWMW5">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tezdjotp2B">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tezaZsWMW5">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tezdjotp2B">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -234,7 +234,7 @@
         <div class="row content-wrapper justify-content-center">
             <div class="col-lg-4 offset-lg-1 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="lLgbI8/59Ehb0ewzGg9J3h3lupWKU9twMhIOb5tIlPuNEjf4T63uOgLwU5b8FCDAlT/nrm8KKMbgMWDy6GRsW4rUkMSMLmKKwsUz7R9oFUL/C/180QI/Sb6VSlm1DRYd">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aB9eIQck0VbqaTWpM+EwNccBbzECvw20hoTI5cj2Ea05LcOyQaW/q2x/kdcByW/G5Gvnnnoy+GdB10PfInYmtvTp68xBNUOuBFMzZJqp2amiZCm6E/k/cZ3LpZewgynV">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -349,7 +349,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/web-page-maker.html">Web Page Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
