--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="">
   <meta property="og:image" content="">
-  <meta name="twitter:title" content="Home">
+  <meta name="twitter:title" content="Home/TannuPortfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/35-20220813002542-128x128-1.png" type="image/x-icon">
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>Home/TannuPortfolio</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 image-wrapper">
-                <a href="https://mk.yopo.work/files/a3a90f5b-9284-43a5-823e-e6005bfd871c"><img class="w-100" src="https://mk.yopo.work/files/a3a90f5b-9284-43a5-823e-e6005bfd871c" alt="Mobirise Website Builder"></a>
+                <a href="https://mk.yopo.work/files/a3a90f5b-9284-43a5-823e-e6005bfd871c"><img class="w-100" src="file:///C:/Users/uttyRentalPanasonic/AppData/Local/Mobirise.com/Mobirise/projects/project-2022-08-15_170559/assets/images/a3a90f5b-9284-43a5-823e-e6005bfd871c1." alt="Mobirise Website Builder"></a>
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
@@ -144,8 +144,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezdjotp2B-modal" data-bs-target="#tezdjotp2B-modal">
-                    <img class="w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#teA7GZfJtR-modal" data-bs-target="#teA7GZfJtR-modal">
+                    <img class="w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-teA7GZfJtR" data-bs-target="#lb-teA7GZfJtR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -153,8 +153,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Mobile Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezdjotp2B-modal" data-bs-target="#tezdjotp2B-modal">
-                    <img class="w-100" src="assets/images/mbr-3.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#teA7GZfJtR-modal" data-bs-target="#teA7GZfJtR-modal">
+                    <img class="w-100" src="assets/images/mbr-3.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-teA7GZfJtR" data-bs-target="#lb-teA7GZfJtR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -162,8 +162,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Polygraphic Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezdjotp2B-modal" data-bs-target="#tezdjotp2B-modal">
-                    <img class="w-100" src="assets/images/mbr-4.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#teA7GZfJtR-modal" data-bs-target="#teA7GZfJtR-modal">
+                    <img class="w-100" src="assets/images/mbr-4.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-teA7GZfJtR" data-bs-target="#lb-teA7GZfJtR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -171,8 +171,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Web Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tezdjotp2B-modal" data-bs-target="#tezdjotp2B-modal">
-                    <img class="w-100" src="assets/images/mbr-6.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#teA7GZfJtR-modal" data-bs-target="#teA7GZfJtR-modal">
+                    <img class="w-100" src="assets/images/mbr-6.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-teA7GZfJtR" data-bs-target="#lb-teA7GZfJtR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -181,11 +181,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tezdjotp2B-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="teA7GZfJtR-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-tezdjotp2B" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-teA7GZfJtR" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder">
@@ -201,18 +201,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tezdjotp2B" data-bs-target="#lb-tezdjotp2B"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-teA7GZfJtR" data-bs-target="#lb-teA7GZfJtR"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-teA7GZfJtR" data-bs-target="#lb-teA7GZfJtR"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-teA7GZfJtR" data-bs-target="#lb-teA7GZfJtR"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-teA7GZfJtR" data-bs-target="#lb-teA7GZfJtR"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tezdjotp2B">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-teA7GZfJtR">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tezdjotp2B">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-teA7GZfJtR">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -234,7 +234,7 @@
         <div class="row content-wrapper justify-content-center">
             <div class="col-lg-4 offset-lg-1 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aB9eIQck0VbqaTWpM+EwNccBbzECvw20hoTI5cj2Ea05LcOyQaW/q2x/kdcByW/G5Gvnnnoy+GdB10PfInYmtvTp68xBNUOuBFMzZJqp2amiZCm6E/k/cZ3LpZewgynV">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="0EpIcapcYiEajZ4fphnIL8wk8zF9EVM5lFmYSIEeTfnSAzKHJK2FC1e5Go0+/cTRjmo+6vgd6FOmHvep/QcmXCxDABpzBjd973VsGTGTapKkA/9qnfmpK8sYOmlnMMah">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -349,7 +349,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/web-page-maker.html">Web Page Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2700481" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-maker.html">Free Web Site Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
